# prism

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  bspline.py  requirements-conda.txt  requirements.txt  setup.cfg  setup.py  test.py  text.txt  trend.py
conda/: requirements.txt
data/: ch4_brw.txt  ch4_mlo.txt  co2_brw.txt  co2_mlo.txt  co2_mlo_surface-flask_1_ccgg_event.txt
data/mbl/input/: abp_dat.co2  alt_dat.co2  asc_dat.co2  azr_dat.co2  cba_dat.co2  cgo_dat.co2  hba_dat.co2  mid_dat.co2  poc000_dat.co2  pocn15_dat.co2  pocn30_dat.co2  pocs05_dat.co2  pocs10_dat.co2  pocs30_dat.co2  pocs35_dat.co2  psa_dat.co2  rpb_dat.co2  shm_dat.co2  smo_dat.co2  stm_dat.co2  syo_dat.co2
data/mbl/reference/: ch4_GHGreference_zonal.txt  co2_GHGreference_zonal.txt
doc/: api.rst  conf.py  index.rst  install.rst  references.rst
doc/examples/: co2_mlo.rst  elec_equip.rst  index.rst
doc/methods/: fitting.rst  index.rst  model.rst  uncertainty.rst
examples/: ch4_azr.py  ch4_ccgfilt.py  ch4_mlo.py  ch4_mlo_prism_vs_ccgfilt.py  co2_mlo.py  elec_equip.py  illustration.py  temperatures_jena.py
examples/data/cache/: ch4_mlo_surface-insitu_1_ccgg_MonthlyData.txt
examples_doc/: ch4_mlo.rst  co2_mlo.rst  index.rst
gml_packages/ccgrcv/: README.txt  ccg_dates.py  ccg_filter.py  ccgcrv.py
gml_packages/dei/: README  bs_network.py  ccg_data.py  ccg_dates.py  ccg_db.py  ccg_filter.py  ccg_pptfit.py  ccg_quickfilter.py  ccg_readinit.py  ccg_siteinfo.py  ccg_utils.py  dei.py  dei.sh  dei_bs.py  dei_bs_driver.py  dei_driver.py  dei_effective_unc.py  dei_unc.py  init.co2.txt  siteinfo.txt
gml_packages/dei/data/: ams_dat.co2  avi_dat.co2  bme_dat.co2  bmw_dat.co2  brw_dat.co2  chr_dat.co2  crz_dat.co2  gmi_dat.co2  ice_dat.co2  key_dat.co2  kum_dat.co2  mbc_dat.co2  mhd_dat.co2  pocn05_dat.co2  pocn10_dat.co2  pocn20_dat.co2  pocn25_dat.co2  pocs15_dat.co2  pocs20_dat.co2  pocs25_dat.co2  spo_dat.co2  zep_dat.co2
prism/: __init__.py  _util.py  core.py  data.py
src/prism/: __init__.py  bspline.py  core.py  util.py
