[metadata]
name = prism
summary = Spline-based regression and decomposition of time series with seasonal and trend components.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Matthieu SIMEONI
author_email = matthieu.simeoni@gmail.com
url = https://github.com/matthieumeo/prism
download_url = https://github.com/matthieumeo/prism
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
license = MIT

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = True

[build_sphinx]
build-dir = build
source-dir = doc
builder = html
warning-is-error = True

[files]
packages = 
    prism